--- a/src/app/gyms/[subdomain]/gym-landing.module.css
+++ b/src/app/gyms/[subdomain]/gym-landing.module.css
@@ -491,7 +491,8 @@
 .modalFormContainer {
   padding: 0 30px 30px;
   flex: 1;
-  min-height: 0;
+  min-height: 667px;
+  height: 100%;
 }
 
 .modalClose {
