Revert transform approach: Use negative margins to crop white space instead

--- a/src/app/gyms/[subdomain]/gym-landing.module.css
+++ b/src/app/gyms/[subdomain]/gym-landing.module.css
@@ -857,17 +857,17 @@
   }
 
   .iframeWrapper {
-    height: 450px !important;
-    max-height: 450px !important;
+    height: 500px !important;
+    max-height: 500px !important;
     overflow: hidden !important;
     position: relative !important;
   }
 
   .heroFormIframe {
     width: 100% !important;
-    height: 800px !important;
-    transform: scale(1.6) translateY(-150px) !important;
-    transform-origin: center top !important;
+    height: 700px !important;
+    margin-top: -100px !important;
+    margin-bottom: -100px !important;
   }
 
   .urgency {
