--- a/src/app/gyms/[subdomain]/gym-landing.module.css
+++ b/src/app/gyms/[subdomain]/gym-landing.module.css
@@ -915,7 +915,7 @@
 .thankYouHeadline {
   font-size: 48px;
   font-weight: bold;
-  color: #ff6b35;
+  color: white;
   margin-bottom: 20px;
   line-height: 1.2;
   text-align: center;
@@ -923,7 +923,7 @@
 
 .thankYouSubheadline {
   font-size: 24px;
-  color: #333;
+  color: white;
   margin-bottom: 40px;
   font-weight: 500;
   text-align: center;
