--- a/src/app/gyms/[subdomain]/men-lp/men-lp.module.css
+++ b/src/app/gyms/[subdomain]/men-lp/men-lp.module.css
@@ -120,6 +120,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 10px 0;
+  font-size: 28px;
 }
 
 .heroContent {
